MetaInfoGenerator & README.md